--- a/package.json
+++ b/package.json
@@ -1,14 +1,36 @@
 {
-  "name": "route-weather",
+  "name": "prognoza-meteo-ruta",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@googlemaps/polyline-codec": "^1.0.26",
+    "@googlemaps/react-wrapper": "^1.1.29",
+    "@googlemaps/typescript-guards": "^1.0.11",
+    "@mapbox/polyline": "^1.1.1",
+    "@react-pdf/renderer": "^2.1.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "bootstrap": "^5.1.3",
+    "country-flag-icons": "^1.5.4",
+    "decode-google-map-polyline": "^1.0.1",
+    "fast-equals": "^3.0.0",
+    "fs": "^0.0.1-security",
+    "google-map-react": "^2.1.10",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-laag": "^2.0.3",
+    "react-pdf-table": "^1.0.0-alfa.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "4.0.3",
+    "react-toastify": "^8.2.0",
+    "reactjs-popup": "^2.0.5",
+    "recharts": "^2.1.10",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dependency-cruiser": "^11.7.1"
   }
 }
