--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "bootstrap": "^5.1.3",
     "country-flag-icons": "^1.5.4",
     "decode-google-map-polyline": "^1.0.1",
-    "fast-equals": "^3.0.0",
-    "fs": "^0.0.1-security",
+    "fast-equals": "^4.0.3",
     "google-map-react": "^2.1.10",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -23,15 +22,12 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-laag": "^2.0.3",
-    "react-pdf-table": "^1.0.0-alfa.2",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.2.0",
     "reactjs-popup": "^2.0.5",
-    "recharts": "^2.1.10",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.1.15",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
